--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parse-srcset",
   "version": "1.1.0",
   "description": "A spec-conformant JavaScript parser for the HTML5 srcset attribute",
-  "main": "src/parse-srcset.js",
+  "main": "src/main.js",
   "directories": {
     "test": "tests"
   },
